Bug 79978 - SUMPRODUCT() does not propagate errors anymore
Summary: SUMPRODUCT() does not propagate errors anymore
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Eike Rathke
URL:
Whiteboard: target:4.4.0 target:4.3.0.1 target:4.2.6
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-06-13 12:05 UTC by Eike Rathke
Modified: 2014-06-13 16:58 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Rathke 2014-06-13 12:05:29 UTC
A1: 1
A2: =1/0
A3: =SUMPRODUCT(A1:A2)
    should result in #DIV/0! error but gives 1 instead.
Comment 1 Commit Notification 2014-06-13 12:23:20 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a288bebbcec0b16e1ced09a601de5ffbb6b1bbe0

resolved fdo#79978 propagate error through DoubleArray of matrix



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2014-06-13 12:44:22 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d83ab715a04c166ad0e8962b52c0800fb6f2969c&h=libreoffice-4-3

resolved fdo#79978 propagate error through DoubleArray of matrix


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Eike Rathke 2014-06-13 13:16:12 UTC
Pending review
for 4-2 at https://gerrit.libreoffice.org/9768
for 4-2-5 at https://gerrit.libreoffice.org/9771
Comment 4 Commit Notification 2014-06-13 13:40:11 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d6c55b4b2c549f19fe5bb7ab06d823ae5eced5df&h=libreoffice-4-2

resolved fdo#79978 propagate error through DoubleArray of matrix


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-06-13 16:58:53 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5a320d1ae20b58e839bb9f8a7deef0c837d0cce5

unit test for ForcedArray matrix error propagation, fdo#79978



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.