resolved fdo#79978 propagate error through DoubleArray of matrix

Regression introduced with 83f77ab0661df992f241e5f9ecb1aa8f8eaeafec.

Interpreter errors are transported using NaN coded doubles, using simple
setNan()/isNan() to flag and ignore non-numeric values skips all error
values.

Change-Id: I0d3cb30262bc5ba7ee77e53a2bc45e56569fbc4b